--- a/posts/catalogue-management-products.mdx
+++ b/posts/catalogue-management-products.mdx
@@ -16,7 +16,7 @@ Before we get started, first you may check <Link href="/profile-completion">Prof
 ## Category Creation
 **There are more than 10000 categories are available on the GeM Portal**, but sometime we can't get the right one for our product. Therefore we are starting with **Creating a New Category on GeM Portal**.
 
-Login to the GeM with your UserId and Password and find the *Catalogue* link on the header. Hover (Move your mouse) on that link, you will see two option, one is Products and another one is Services. Again hover on the Products link and then click on "*Add New Offering*".
+Login to the GeM with your User Id and Password and find the *Catalogue* link on the header. Hover (Move your mouse) on that link, you will see two option, one is Products and another one is Services. Again hover on the Products link and then click on "*Add New Offering*".
 
 The new listing creation page will open. Left side you can see the category search option. Simply you can just search your category. You can get the available category matching with your search (if available).
 
@@ -41,7 +41,7 @@ There are two ways available for a newly added seller to list his/her product on
 ### Document Guidelines
 #### Applying for Brand
 You can upload one of the following documents as supporting documents for your brand application:
-- Trademark Registration Proof: This can be obtained from the IP India website at https://ipindiaonline.gov.in/tmrpublicsearch/frmmain.aspx by entering brand name and choosing relevant class. The Class should be relevant to the GeM Category in which you are applying the brand. Download and attach the report from the website or attach a screenshot showing brand name and class with the request to submit as proof
+- Trademark Registration Proof: This can be obtained from the <Link href="https://ipindiaonline.gov.in/tmrpublicsearch/frmmain.aspx" rel="nofollow nooper" target="_blank">IP India website</Link> by entering brand name and choosing relevant class. The Class should be relevant to the GeM Category in which you are applying the brand. Download and attach the report from the website or attach a screenshot showing brand name and class with the request to submit as proof
 - Trademark Certificate: Copy of the trademark registration certificate
 - OEM Authorization letter: If you are not the OEM of the brand, you can submit a letter on the OEM's letterhead clearly mentioning the brand name and authorization given to you by OEM to transact in the brand's products. OEM's contact details like contact person, email (on OEM domain) should be included on the letter
 - Govt. Order copy: Scanned copies of any Government orders you have fulfilled in the past showing the products of the brand as order items. The brand name should be clearly visible on the order document
