--- a/posts/pre-requisite.mdx
+++ b/posts/pre-requisite.mdx
@@ -10,13 +10,13 @@ Here are the list of the documents required for the GeM registration.
 
 ### For primary user registration
 - Aadhaar number/ Virtual Id or PAN of the user
-- Mobile number linked with the Aadhar/ Mobile number in case of PAN
+- Mobile number linked with the Aadhaar/ Mobile number in case of PAN
 - Active Email Id
 - Documents as per constitution type such as CIN, PAN, DIPP, UAM, ITR details to complete the profile
 - Address details
 - Bank account details
 
-### Secondry user creation
+### Secondary user creation
 - Aadhaar number
 - Mobile number should be linked with Aadhaar
 - Active Email Id
@@ -39,8 +39,8 @@ following will also be needed:
 There are some points to remember
 - Registration on GeM should be done by an authorized person (Director of an organization or a key person)
 - Details of the authorized person will get validated  as per the Income Tax Return (ITR) filling
-- Primary seller have an option to create a secondry seller's to assign roles like Bid Participation, Creating of Catalog and Order Fullfillment
-- For MSE, UAM (Udhyog Aadhar Memorandum) and Aadhar/mobile number linked with the same is required
+- Primary seller have an option to create a secondary seller's to assign roles like Bid Participation, Creating of Catalog and Order Fulfillment
+- For MSE, UAM (Udhyog Aadhaar Memorandum) and Aadhaar/mobile number linked with the same is required
 - For Start Up, DIPP (Department of Industrial Policy and Promotion) number and mobile number linked with the same is required
-- No seperate registration required for Seller and Service provider
+- No separate registration required for Seller and Service provider
 Now you are ready to create your account on the GeM (Government e-Marketplace).
