--- a/posts/secondary-user-creation.mdx
+++ b/posts/secondary-user-creation.mdx
@@ -1,10 +1,10 @@
 ---
-title: Secondry user creation and defining thier roles on GeM Portal
-description: Breifly explain about secondry user create and manage with role basis on GeM Portal
+title: Secondly user creation and defining their roles on GeM Portal
+description: Briefly explain about secondary user create and manage with role basis on GeM Portal
 ---
-We are going to create a secondry user for our GeM account and will assign his/her role. We have created and copleted our profile in <Link href="/profile-completion">previous articles</Link>.
-In this article we are going to create a secondry user and manage his/her role.
-## Create secondry user
+We are going to create a secondary user for our GeM account and will assign his/her role. We have created and completed our profile in <Link href="/profile-completion">previous articles</Link>.
+In this article we are going to create a secondary user and manage his/her role.
+## Create secondary user
 First login to your GeM Account and go to the profile section.
 
 Go to My Team
@@ -13,25 +13,25 @@ You can see two options here, one is "User List"[^1] and another one is "Add Sec
 
 Enter the Email Id of the users and select roles for him/her[^3]. Then click on "ADD USER" button.
 
-The activation link will be sent to the secondry user's Email. Open the mail and click on "Verify me now" button.
+The activation link will be sent to the secondary user's Email. Open the mail and click on "Verify me now" button.
 
 <Notes title="Note:" 
-content="If Primary user has registered with PAN, the Secondary user will have to register with PAN. And, If Primary user has registered with Adhaar, the Secondary user will have to register with Aadhaar."/>
+content="If Primary user has registered with PAN, the Secondary user will have to register with PAN. And, If Primary user has registered with Aadhaar, the Secondary user will have to register with Aadhaar."/>
 
 ### Registration using PAN
-If the primary user was registered with the PAN, the secondry user must have to registered with the PAN. Therefore we are going to create a secondry user with the PAN.
+If the primary user was registered with the PAN, the secondary user must have to registered with the PAN. Therefore we are going to create a secondary user with the PAN.
 
 Enter the required details in "User Account Activation Form" and click on "VERIFY PAN" button. Once the PAN is verified, enter your DOB (Date of Birth) and phone number. Then verify your phone number with the OTP.
 
-Now create your Userid and Password and click on "REVIEW TERMS & CONDITIONS" button. Click on the checkbox to accept their Terms & Conditions and then click on "CREATE ACCOUNT".
+Now create your User id and Password and click on "REVIEW TERMS & CONDITIONS" button. Click on the checkbox to accept their Terms & Conditions and then click on "CREATE ACCOUNT".
 
 You will see a success message, "You have been activated successfully".
 
 ### Registration using Aadhaar
-If the primary user was registered with the Aadhaar, the secondry user must have to registered with the Aadhaar. Therefore we are going to create a secondry user with the Aadhaar.
+If the primary user was registered with the Aadhaar, the secondary user must have to registered with the Aadhaar. Therefore we are going to create a secondary user with the Aadhaar.
 
 Enter the required details in "User Account Activation Form" and click on "VERIFY AADHAAR" button. You will receive an OTP on mobile number registered with Aadhaar. Enter that and click on "Verify".
-You will see the success message, "Aadhaar verification successful". Fill out the required details and create a Userid and Password for your account and click on "REVIEW TERMS & CONDITIONS".
+You will see the success message, "Aadhaar verification successful". Fill out the required details and create a User id and Password for your account and click on "REVIEW TERMS & CONDITIONS".
 
 Click on the checkbox to accept their Terms & Conditions. Click on "CREATE ACCOUNT" button.
 
@@ -42,14 +42,14 @@ the Secondary User can update their profile by logging in to GeM portal with
 their credentials.
 
 ### Update the Secondary User's Profile
-Once the secondry user login with his/her credentials, he/she will be able to Change Password, Change Email, and Update Mobile.
+Once the secondary user login with his/her credentials, he/she will be able to Change Password, Change Email, and Update Mobile.
 #### Change Password
 Login to your account and go to the My Account > Change Password.
 
 Click on "GET OTP" button to get the OTP for the Password reset process. Fill in the OTP and click on the "VERIFY OTP" button.
 Now set a new Password and click on the "SAVE". Your password is changed successfully.
 #### Change Email
-Go to the My Account > Chnage Email to change your registered Email id.
+Go to the My Account > Change Email to change your registered Email id.
 Enter the new email id and click on "SEND OTP". Enter the OTP (sent on new email).
 
 #### Update Mobile
@@ -58,4 +58,4 @@ Enter the mobile number and click on "SEND OTP". Enter the OTP and Verify. Your 
 
 [^1]: You can review the list of users here
 [^2]: You can add secondary user and define roles here
-[^3]: You can select more than one role for secondry user
+[^3]: You can select more than one role for secondary user
