--- a/posts/seller-dashboard-overview.mdx
+++ b/posts/seller-dashboard-overview.mdx
@@ -30,8 +30,8 @@ This section contains three sub menu, 1. Dashboard, 2. Manage Caution Money, 3. 
 There are too many things which can be found in the dashboard section like Notification, GeM Stats, Incident etc.
 - **Notifications** : You can see latest STC updates and latest bids in this section.
 - **Summary** : This section is about your seller rating, Number of orders you got yet, Products and Services you are offering, Participated Bid and RA stats, Transaction Charges you paid to GeM, Incidents you created or created in your account.
-- **Orders and Payments** : You can see the total orders and the payments of that order, Order Value/Volume Trend Monthly (Last 12 Months), and Buyer Organisation Wise Order Volume (Last 12 Months).
-- **Bid/RA** : This section is about Bid Statistics. This section will show you, how many bids you participated in, won and lost on the multiple critarea.
+- **Orders and Payments** : You can see the total orders and the payments of that order, Order Value/Volume Trend Monthly (Last 12 Months), and Buyer Organization Wise Order Volume (Last 12 Months).
+- **Bid/RA** : This section is about Bid Statistics. This section will show you, how many bids you participated in, won and lost on the multiple criteria.
 - **Category Insights** : This section will show you the graph insights of the category, ministry and the location of the buyers.
 - **Product and Services** : It is all about your listings stats.
 - **Incident** : Here you can find all Incident in which you are involved.
@@ -43,7 +43,7 @@ You must have to submit your Caution Money to start listing your products or ser
 
 "Account Balance and Status" will show you the available amount in your account. It gives you three options
 - **Update Balance** : You can update your balance by clicking this button.
-- **Generate Challan and View statement** : You will redirect to an external website by clicking this button. You can view the statement or transsfer the anount to an account.
+- **Generate Challan and View statement** : You will redirect to an external website by clicking this button. You can view the statement or transfer the amount to an account.
 - **Withdraw Excess Funds** : You can withdraw excess fund from the Caution money.
 
 ### Upload TDS Certificate
@@ -68,7 +68,7 @@ This will allow you to manage all your products. There are three sub menu availa
 ##### Add New Offering
 This link will take you to that page where you can add new listing.
 ##### Search My Offerings
-You can see all availbel listings, brand request, drafts, notified catalogue etc.
+You can see all available listings, brand request, drafts, notified catalogue etc.
 ##### View All Categories
 You can view all the available categories on the GeM Portal.
 
