--- a/posts/profile-completion.mdx
+++ b/posts/profile-completion.mdx
@@ -23,7 +23,7 @@ Before moving forward let's have a look on the pre-requisites to complete our pr
 8. Billing Address with GSTIN Number (in the absence of GSTIN you will not be able to accept
    any orders beyond INR 2.5 lacs on GeM)
 
-The profile section is devided into four sections
+The profile section is divided into four sections
 
 1. **My Company**
 2. **My Action**
@@ -48,7 +48,7 @@ There are five options available in this section
 - **Vendor Assessment** : You can manage Vender Assessment from here
 - **OEM Panel** : Manage all the resellers and catalogue from OEM Panel
 - **Reseller Panel** : Manage all the reseller activities from here
-- **Change Business or Organisation Type** : use this section to change the business/organisation type [^note]
+- **Change Business or Organization Type** : use this section to change the business/organization type [^note]
 - **Close Account** : use this panel to close your GeM Account
 
 ### Personal Setting
@@ -61,7 +61,7 @@ This section has three options
 
 ### My Team
 
-This section has one option to manage the secondry user, called "Add Secondary User".
+This section has one option to manage the secondary user, called "Add Secondary User".
 
 ## Steps to complete the GeM Profile
 
@@ -70,23 +70,23 @@ Now let's go through the steps to complete the GeM Profile
 1. Log in to your seller account on the GeM Portal with your username and password and click on the "My Account" option, available on the top right corner of the screen
 2. PAN Validation section will open automatically. Now just enter your PAN details and click on the "VERIFY PAN" button. After the verification of the PAN, the section of the "PAN Validation" will be green
 3. Now click on the "Company Details" section to proceed further
-4. We have to fill the company details and cilck on the "SAVE" buton to save the details
-   in case of business/organisation type is company additional information required is CIN.
+4. We have to fill the company details and click on the "SAVE" button to save the details
+   in case of business/organization type is company additional information required is CIN.
 
-After the CIN details and comapny name enter, type of comany and Date of Incorporation will fetch automatically
+After the CIN details and company name enter, type of company and Date of Incorporation will fetch automatically
 
-5. Cilck on the next section i.e. "Company Profile" to proceed further 
-6. Cilck on the options as applicable
+5. Click on the next section i.e. "Company Profile" to proceed further 
+6. Click on the options as applicable
 
     - If you are a Startup and registered with Startup India, then click on yes. Now enter your DIPP number and the phone number linked with the same to verify the OTP.
-    - If you are MSE and registered with Micro and Small Enterprices, then click on yes. Now enter your UAM number and the phone number to verify the entity
+    - If you are MSE and registered with Micro and Small Enterprises, then click on yes. Now enter your UAM number and the phone number to verify the entity
     - If you want to participate in Bids then click on yes
 
 After filling the all details click on the "SAVE" button.
 
 7. Now it's time to add an office location. (Office registered address is mandatory)
 8. To add a location click on "NEW" button, then enter the all details and verify with your email and click on "CREATE" button to save the details
-Companies and Firms are required to verify key person information as per ITR recoeds
+Companies and Firms are required to verify key person information as per ITR recodes
 9. Click "VERIFY COMPANY DETAILS" after filling all details
 10. Now click on the "Bank Accounts" section to proceed further
 11. Fill in the bank account details and click on "SAVE" button
@@ -94,7 +94,7 @@ Companies and Firms are required to verify key person information as per ITR rec
 
 Now your profile is 100% completed and My actions, My Team and Personal Settings tabs will get activated
 
-[^note]: You can change the business/organisation type only once
+[^note]: You can change the business/organization type only once
 - Account can only be closed in case no catalogue is uploaded in the account
 - You can view the seller details in Personal Settings > Seller Profile
 - You can change password by going Personal Settings > Change Password
