--- a/posts/vendor-assesment.mdx
+++ b/posts/vendor-assesment.mdx
@@ -4,7 +4,7 @@ description : Learn everything about Vendor Assessment and Vendor Assessment Exe
 ---
 The term Vendor Assessment same as other E-Commerce platform like, Flipkart has F-Assured.
 ## What is Vendor Assessment
-**Vendor Assessment** is mandatory for all the sellers on GeM. In this article we will understand abou **Vendor Assessment** and **Vendor Assessment Exemption** on the GeM Portal.
+**Vendor Assessment** is mandatory for all the sellers on GeM. In this article we will understand about **Vendor Assessment** and **Vendor Assessment Exemption** on the GeM Portal.
 ### Key notes on Vendor Assessment
 - Vendor Validation is mandatory for all sellers in GeM. One component of Vendor validation is Vendor Assessment, which is mandatory for certain sellers.
 - At present Vendor Assessment is done by Quality Council of India.
@@ -24,7 +24,7 @@ Vendor Assessment tab would open.
 
 Select format type for Vendor Assessment as "Manufacturers or OEMs". Click on "INITIATE VENDOR ASSESSMENT".
 
-A pre filled form with seller information will oepn. You just need to enter additional mobile number and additional email. Now proceed by clicking on "SAVE & PROCEED" button.
+A pre filled form with seller information will open. You just need to enter additional mobile number and additional email. Now proceed by clicking on "SAVE & PROCEED" button.
 
 The bank details will also auto fetched by the system, you just need to proceed.
 Category Details tab will open. Enter the categories [^1] [^2]. In "SOLD DETAILS" tab, enter previous order's details and proceed.
