--- a/posts/profile-completion.mdx
+++ b/posts/profile-completion.mdx
@@ -92,10 +92,18 @@ Companies and Firms are required to verify key person information as per ITR rec
 11. Fill in the bank account details and click on "SAVE" button
 12. "Tax Assessment" panel will open. Please read the instructions carefully and fill in the ITR Details
 
-Now your profile is 100% completed and My actions, My Team and Personal Settings tabs will get activated
+<Image 
+src="https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685056/MY_PROFILE_nv8tqu.png"
+alt = "Profile Completion on GeM"
+width = "800"
+height = "500"
+/>
 
-[^note]: You can change the business/organization type only once
+Now your profile is 100% completed and My actions, My Team and Personal Settings tabs will get activated.
+
 - Account can only be closed in case no catalogue is uploaded in the account
 - You can view the seller details in Personal Settings > Seller Profile
 - You can change password by going Personal Settings > Change Password
 - You can update the email address by going Personal Settings > Change Email
+
+[^note]: You can change the business/organization type only once
