--- a/posts/secondary-user-creation.mdx
+++ b/posts/secondary-user-creation.mdx
@@ -11,7 +11,21 @@ Go to My Team
 
 You can see two options here, one is "User List"[^1] and another one is "Add Secondary User"[^2]
 
+<Image 
+src="https://res.cloudinary.com/dl3tfsbn5/image/upload/c_scale,w_800/v1642685059/USER_ywggpt.png"
+alt = "Profile Completion on GeM"
+width = "800"
+height = "500"
+/>
+
 Enter the Email Id of the users and select roles for him/her[^3]. Then click on "ADD USER" button.
+
+<Image 
+src="https://res.cloudinary.com/dl3tfsbn5/image/upload/c_scale,w_800/v1642685057/SELECT_ROLE_khblbi.png"
+alt = "Profile Completion on GeM"
+width = "800"
+height = "500"
+/>
 
 The activation link will be sent to the secondary user's Email. Open the mail and click on "Verify me now" button.
 
