--- a/posts/seller-dashboard-overview.mdx
+++ b/posts/seller-dashboard-overview.mdx
@@ -28,6 +28,14 @@ This section contains three sub menu, 1. Dashboard, 2. Manage Caution Money, 3. 
 
 #### Dashboard
 There are too many things which can be found in the dashboard section like Notification, GeM Stats, Incident etc.
+
+<Image
+src = "https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685055/FULL_DASHBOARD_ri4ns5.png"
+alt = "GeM Registration successfully"
+width = "1200"
+height = "900"
+/>
+
 - **Notifications** : You can see latest STC updates and latest bids in this section.
 - **Summary** : This section is about your seller rating, Number of orders you got yet, Products and Services you are offering, Participated Bid and RA stats, Transaction Charges you paid to GeM, Incidents you created or created in your account.
 - **Orders and Payments** : You can see the total orders and the payments of that order, Order Value/Volume Trend Monthly (Last 12 Months), and Buyer Organization Wise Order Volume (Last 12 Months).
@@ -41,6 +49,13 @@ There are too many things which can be found in the dashboard section like Notif
 ### Manage Caution Money
 You must have to submit your Caution Money to start listing your products or services on GeM Portal. You can manage your Caution money from here. You can see a virtual bank account number, ifsc, and Bank name. You have to deposit the amount in the given details.
 
+<Image
+src = "https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685062/CAUTION_MONEY_MANAGE_ACCOUNT_e364bg.png"
+alt = "GeM Registration successfully"
+width = "1200"
+height = "900"
+/>
+
 "Account Balance and Status" will show you the available amount in your account. It gives you three options
 - **Update Balance** : You can update your balance by clicking this button.
 - **Generate Challan and View statement** : You will redirect to an external website by clicking this button. You can view the statement or transfer the amount to an account.
@@ -49,8 +64,22 @@ You must have to submit your Caution Money to start listing your products or ser
 ### Upload TDS Certificate
 You can search and upload TDS Certificate from this panel.
 
+<Image
+src = "https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685055/DASHBOAR_d8uicf.png"
+alt = "GeM Registration successfully"
+width = "1200"
+height = "900"
+/>
+
 ### Market
 This is the marketplace of the GeM. You can search any product or service by simply searching in the search bar. Or you can also find the product categories wise.
+
+<Image
+src = "https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685056/GEM_MARKET_nmj0qy.png"
+alt = "GeM Registration successfully"
+width = "1200"
+height = "900"
+/>
 
 ### Orders
 Orders section is all about the orders you received on the GeM. You can view the order, download the contract, generate the invoices, update the delivery details through this section on GeM Portal.
@@ -58,11 +87,33 @@ Orders section is all about the orders you received on the GeM. You can view the
 ### Bids
 There is only one link in this menu, i.e List of Bids. By clicking on this link you will be redirect to the bidplus on the GeM Portal, where you can see all ongoing Bids/RAs and the status of the participated bids.
 
+<Image
+src = "https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685060/BID_SECTION_vs4qbn.png"
+alt = "GeM Registration successfully"
+width = "1200"
+height = "900"
+/>
+
 ### Purchase Requisitions
 This section is about Purchase Requisitions.
 
+<Image
+src="https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685057/PURCHASE_REQUESTION_hyvmjg.png"
+alt="Purchase requisite"
+width = "1200"
+height = "900"
+/>
+
 ### Catalogue
 There are two options available here, one is Products and another one is Services.
+
+<Image
+src = "https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685061/CATALOGUE_LINK_uqqu7w.png"
+alt = "GeM Registration successfully"
+width = "1200"
+height = "900"
+/>
+
 #### Products
 This will allow you to manage all your products. There are three sub menu available in this menu. 1. Add New Offering, 2. Search My Offerings, 3. View All Categories.
 ##### Add New Offering
