Fix contact form

--- a/posts/secondary-user-creation.mdx
+++ b/posts/secondary-user-creation.mdx
@@ -1,5 +1,5 @@
 ---
-title: Secondly user creation and defining their roles on GeM Portal
+title: Secondary user creation and defining their roles on GeM Portal
 description: Briefly explain about secondary user create and manage with role basis on GeM Portal
 ---
 We are going to create a secondary user for our GeM account and will assign his/her role. We have created and completed our profile in <Link href="/profile-completion">previous articles</Link>.
