Last post complete

--- a/posts/catalogue-management-services.mdx
+++ b/posts/catalogue-management-services.mdx
@@ -2,4 +2,24 @@
 title: Catalogue management - Services on GeM Portal
 description: All about the Catalogue Management for the services in details on GeM (Government e-Marketplace) Portal
 ---
+
 The Catalogue Management System enables the Service providers to broadcast their services, rate sheets and introduce new services.
+In previous tutorial we have seen <Link href="/catalogue-management-products">Catalogue Management for Products</Link>. Service listing on GeM is quite different from products listing.
+
+## Add new Service offering
+
+There are some steps to create a new listing of service.
+
+1. Log in to GeM Portal with your username and password
+2. go to Catalogue > Services > Add New Offering
+3. Find the category[^1]
+
+The service listing tab will open. You can read all description of the service by clicking on the Description tab.
+You can also read service level agreement by click the "Service level Agreement" link.
+
+4. Click on the "Experience" tab and fill the relevant information about your previous orders
+5. Click on the "Rate Sheet" tab and quote your price
+6. Upload your certificates in the certificate tab
+   Validate and save the offering
+
+[^1]: You can select category by using pagination or simply search it using search button.
