--- a/posts/vendor-assesment.mdx
+++ b/posts/vendor-assesment.mdx
@@ -1,11 +1,16 @@
 ---
 title: All about Vendor Assessment and Exemption on GeM Portal
-description : Learn everything about Vendor Assessment and Vendor Assessment Exemption on the GeM (Government e-Marketplace) Portal
+description: Learn everything about Vendor Assessment and Vendor Assessment Exemption on the GeM (Government e-Marketplace) Portal
 ---
+
 The term Vendor Assessment same as other E-Commerce platform like, Flipkart has F-Assured.
+
 ## What is Vendor Assessment
+
 **Vendor Assessment** is mandatory for all the sellers on GeM. In this article we will understand about **Vendor Assessment** and **Vendor Assessment Exemption** on the GeM Portal.
+
 ### Key notes on Vendor Assessment
+
 - Vendor Validation is mandatory for all sellers in GeM. One component of Vendor validation is Vendor Assessment, which is mandatory for certain sellers.
 - At present Vendor Assessment is done by Quality Council of India.
 - The QCI Vendor Assessment is online.
@@ -14,12 +19,14 @@ The term Vendor Assessment same as other E-Commerce platform like, Flipkart has 
 - The validity of Vendor Assessment is 3 years.
 - Sellers are free to repeat the assessment even before the expiry of validity.
 - Certain categories of sellers are exempted from Vendor. Application for exemption can be made in the portal.
+
 ## Steps to get Vendor Assessed
+
 Let's apply for Vendor Assessment.
 
-Login to your GeM account with your username and password. Go to the *My Account* section and then *My Action*.
+Login to your GeM account with your username and password. Go to the _My Account_ section and then _My Action_.
 
-Click on *Vendor Assessments* tab. You would see two tabs, one is "ASSESSMENTS" and another one is "ASSESSMENT EXEMPTIONS". Go with "ASSESSMENT" and click on "CREATE NEW ASSESSMENT" button.
+Click on _Vendor Assessments_ tab. You would see two tabs, one is "ASSESSMENTS" and another one is "ASSESSMENT EXEMPTIONS". Go with "ASSESSMENT" and click on "CREATE NEW ASSESSMENT" button.
 Vendor Assessment tab would open.
 
 Select format type for Vendor Assessment as "Manufacturers or OEMs". Click on "INITIATE VENDOR ASSESSMENT".
@@ -36,6 +43,7 @@ Payments tab will open. Now you have to pay the sum [^3] to get your form submit
 You can view your request in the Assessment Tab [^4].
 
 ## Steps to get Vendor Assessment Exemption
+
 Now let's see how to get **Vendor Assessment Exemption**. But before going forward, first let's see who is able to get vendor assessment exemption.
 
 - Sellers having annual turnover of Rs 500 Crore or more, at least in one of the latest three years as captured during registration
@@ -46,7 +54,7 @@ Now let's see how to get **Vendor Assessment Exemption**. But before going forwa
 - KVIC, WDO, Coir Board, TRIFED
 - OEMs who are registered with NSIC (for the category for which registration was obtained). This exemption will be coterminous with NSIC certificate validity
 - OEMs holding BIS License for the particular product category which are validated through BIS database. Normal validity for this exemption will be three years. Seller is mandated to notify GeM in case cancellation of BIS license and exemption will be withdrawn
--  OEMs having Unique Certification Code (UCC) issued by DRDO/ OFB/ SITRA. This exemption will be coterminous with UCC certificate validity
+- OEMs having Unique Certification Code (UCC) issued by DRDO/ OFB/ SITRA. This exemption will be coterminous with UCC certificate validity
 - Sellers recommended for exemption for specific categories and specified validity period by any CPSE, Central and State Government Departments/ Authorities
 - Any other category of sellers as notified with the approval of CEO-GeM
 
@@ -61,11 +69,14 @@ Your Vendor Assessment Exemption request has been created. Please note down the 
 You can view your vendor assessment exemption request in "ASSESSMENTS EXEMPTIONS" tab.
 
 ## QCI's role Post Vendor Assessment Submission
+
 - The Vendor Assessment will be assigned to QCI with a unique assessment number and will be visible in their Vendor Assessment Panel on GeM
 - QCI will then initiate the assessment by sending an e-mail to the seller’s registered e-mail id detailing the process of assessment along with log in credentials and update the status as pass/fail of assessment after completing the Vendor Assessment as per current process by digitally sending the parameters of the report and a PDF link of the report for the seller
 - QCI will also verify those sellers who have applied for exemption and mark their status as Pass/Fail in GeM through their Vendor Assessment Panel
 - The Vendor Assessment will be consumed by GeM as per current process
+
 ### Vendor assessment is carried out by QCI n 2 stages:
+
 1. **Desktop Assessment** - Information and documents are submitted by the vendor and if any discrepancy is found then non-compliance (NC)would be raised
 2. **Video Assessment** - Video Assessment is conducted by an expert using the mobile based application through video calling. It will validate the entire process submitted by the vendor through documents in Desktop Assessment.
 
