--- a/posts/secondary-user-creation.mdx
+++ b/posts/secondary-user-creation.mdx
@@ -2,37 +2,43 @@
 title: Secondary user creation and defining their roles on GeM Portal
 description: Briefly explain about secondary user create and manage with role basis on GeM Portal
 ---
+
 We are going to create a secondary user for our GeM account and will assign his/her role. We have created and completed our profile in <Link href="/profile-completion">previous articles</Link>.
 In this article we are going to create a secondary user and manage his/her role.
+
 ## Create secondary user
+
 First login to your GeM Account and go to the profile section.
 
 Go to My Team
 
 You can see two options here, one is "User List"[^1] and another one is "Add Secondary User"[^2]
 
-<Image 
-src="https://res.cloudinary.com/dl3tfsbn5/image/upload/c_scale,w_800/v1642685059/USER_ywggpt.png"
-alt = "Profile Completion on GeM"
-width = "800"
-height = "500"
+<Image
+  src="https://res.cloudinary.com/dl3tfsbn5/image/upload/c_scale,w_800/v1642685059/USER_ywggpt.png"
+  alt="Profile Completion on GeM"
+  width="800"
+  height="500"
 />
 
 Enter the Email Id of the users and select roles for him/her[^3]. Then click on "ADD USER" button.
 
-<Image 
-src="https://res.cloudinary.com/dl3tfsbn5/image/upload/c_scale,w_800/v1642685057/SELECT_ROLE_khblbi.png"
-alt = "Profile Completion on GeM"
-width = "800"
-height = "500"
+<Image
+  src="https://res.cloudinary.com/dl3tfsbn5/image/upload/c_scale,w_800/v1642685057/SELECT_ROLE_khblbi.png"
+  alt="Profile Completion on GeM"
+  width="800"
+  height="500"
 />
 
 The activation link will be sent to the secondary user's Email. Open the mail and click on "Verify me now" button.
 
-<Notes title="Note:" 
-content="If Primary user has registered with PAN, the Secondary user will have to register with PAN. And, If Primary user has registered with Aadhaar, the Secondary user will have to register with Aadhaar."/>
+<Notes
+  title="Note:"
+  content="If Primary user has registered with PAN, the Secondary user will have to register with PAN. And, If Primary user has registered with Aadhaar, the Secondary user will have to register with Aadhaar."
+/>
 
 ### Registration using PAN
+
 If the primary user was registered with the PAN, the secondary user must have to registered with the PAN. Therefore we are going to create a secondary user with the PAN.
 
 Enter the required details in "User Account Activation Form" and click on "VERIFY PAN" button. Once the PAN is verified, enter your DOB (Date of Birth) and phone number. Then verify your phone number with the OTP.
@@ -42,6 +48,7 @@ Now create your User id and Password and click on "REVIEW TERMS & CONDITIONS" bu
 You will see a success message, "You have been activated successfully".
 
 ### Registration using Aadhaar
+
 If the primary user was registered with the Aadhaar, the secondary user must have to registered with the Aadhaar. Therefore we are going to create a secondary user with the Aadhaar.
 
 Enter the required details in "User Account Activation Form" and click on "VERIFY AADHAAR" button. You will receive an OTP on mobile number registered with Aadhaar. Enter that and click on "Verify".
@@ -56,17 +63,23 @@ the Secondary User can update their profile by logging in to GeM portal with
 their credentials.
 
 ### Update the Secondary User's Profile
+
 Once the secondary user login with his/her credentials, he/she will be able to Change Password, Change Email, and Update Mobile.
+
 #### Change Password
+
 Login to your account and go to the My Account > Change Password.
 
 Click on "GET OTP" button to get the OTP for the Password reset process. Fill in the OTP and click on the "VERIFY OTP" button.
 Now set a new Password and click on the "SAVE". Your password is changed successfully.
+
 #### Change Email
+
 Go to the My Account > Change Email to change your registered Email id.
 Enter the new email id and click on "SEND OTP". Enter the OTP (sent on new email).
 
 #### Update Mobile
+
 To update the mobile number in the GeM Profile, Go to the My Account > Update Mobile.
 Enter the mobile number and click on "SEND OTP". Enter the OTP and Verify. Your new mobile number is updated on the GeM.
 
