bid participation new post

--- a/posts/catalogue-management-products.mdx
+++ b/posts/catalogue-management-products.mdx
@@ -73,6 +73,13 @@ The following documents can be uploaded if you are also applying for OEM Dashboa
 
 Go to the _Catalogue > Products > Add New Offering_. Find the category in which you want to add your brand. New listing tab will be open. You can find _COULDN'T FIND YOUR BRAND ? CLICK HERE TO ADD_ link. Click on the link to create a new request.
 
+<Image
+  src="https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685060/BRAND_NAME_ADDING_uniktj.png"
+  alt="brand creation on gem"
+  width="1200"
+  height="900"
+/>
+
 #### 1. Having a Registered Trademark
 
 Select type of Request as _We own Registered Trademark for a Brand_, enter the brand name and click on _confirm_ and then _PROCEED_.
@@ -93,6 +100,12 @@ Select type of Request as _We are owner of a Brand but do not have Registered tr
 Select type of Request as _We do not own any Brand and want to apply for OEM dashboard without Brand_, enter the brand name and click on _confirm_ and then _PROCEED_.
 
 - Follow the first scenario's steps (You only have to change the documents from first scenario). For more details please read <Link href="#document-guidelines">documents guidelines</Link>
+  <Image
+    src="https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685061/BRAND_NAME_REQUEST_TAB_txlpuw.png"
+    alt="new brand on gem"
+    width="1200"
+    height="900"
+  />
 
 Once the request is submitted, you can track the request status in the Brand/OEM Requests option under the “Published” tab.
 
@@ -100,7 +113,20 @@ Once the request is submitted, you can track the request status in the Brand/OEM
 
 Once the brand name is added successfully, you can add your first listing with your brand. Just go to _Catalogue > Products > Add New Offering_ and follow the steps:
 
+<Image
+  src="https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685061/CATALOGUE_LINK_uqqu7w.png"
+  alt="Add new Offering on gem"
+  width="1200"
+  height="900"
+/>
+
 - Find the category
+  <Image
+    src="https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685056/NEW_LISTING_CREATION_PAGE_f3kxrk.png"
+    alt="New listing on gem"
+    width="1200"
+    height="900"
+  />
 - Select your brand
 - Enter the Golden Parameters specifications
 - Upload the necessary documents
@@ -108,6 +134,15 @@ Once the brand name is added successfully, you can add your first listing with y
 - Save
 
 Once the new listing creation request will successfully submitted, you can track the status of the request in "Waiting for admin clearance" section under "Published" tab.
+
+{" "}
+
+<Image
+  src="https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685061/CATALOGUE_PUBLISHED_TAB_ugkuh6.png"
+  alt="Catalogue status on gem"
+  width="1200"
+  height="900"
+/>
 
 ## Clone Existing Catalogue
 
