--- a/posts/vendor-assesment.mdx
+++ b/posts/vendor-assesment.mdx
@@ -26,6 +26,13 @@ Let's apply for Vendor Assessment.
 
 Login to your GeM account with your username and password. Go to the _My Account_ section and then _My Action_.
 
+<Image
+  src="https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685059/VENDOR_ASSESSMENT_lhma2u.png"
+  alt="Vendor Assessment"
+  width="1200"
+  height="900"
+/>
+
 Click on _Vendor Assessments_ tab. You would see two tabs, one is "ASSESSMENTS" and another one is "ASSESSMENT EXEMPTIONS". Go with "ASSESSMENT" and click on "CREATE NEW ASSESSMENT" button.
 Vendor Assessment tab would open.
 
@@ -62,11 +69,32 @@ If you fall under the Exemption Category click on Assessment Exemption Tab and c
 
 Select the format for vendor assessment exemption which is applicable to you and proceed with the button.
 
+<Image
+  src="https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685059/ASSESS_ME_AS_kc1orm.png"
+  alt="Vendor assessment type"
+  width="1200"
+  height="900"
+/>
+
 Upload the supporting document/certificate and submit
+
+<Image
+  src="https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685059/VENDOR_ASSESSMENT_DOCUMENST_pe06vj.png"
+  alt="Vendor assessment doc"
+  width="1200"
+  height="900"
+/>
 
 Your Vendor Assessment Exemption request has been created. Please note down the request ID for future reference
 
-You can view your vendor assessment exemption request in "ASSESSMENTS EXEMPTIONS" tab.
+<Image
+  src="https://res.cloudinary.com/dl3tfsbn5/image/upload/v1642685060/ASSESSMENT_STATUS_rmvnmo.png"
+  alt="Vendor assessment request"
+  width="1200"
+  height="900"
+/>
+You can view your vendor assessment exemption request in "ASSESSMENTS EXEMPTIONS"
+tab.
 
 ## QCI's role Post Vendor Assessment Submission
 
