Add pages and email correction

--- a/posts/bid-participation.mdx
+++ b/posts/bid-participation.mdx
@@ -5,6 +5,8 @@ description: Steps to participate in products and services bids on the GeM (Gove
 
 The bid participation process is very important for a seller or services provider on the GeM Portal because, if you don not participate in the bid then how can you get the business from the Government.
 
+<YouTube embedId="9SjHKNpJyUc" />
+
 Basically there are two types of bids available on the GeM
 
 1. <a href="#participate-in-product-bids">Product bids</a>
