--- a/posts/catalogue-management-products.mdx
+++ b/posts/catalogue-management-products.mdx
@@ -5,6 +5,8 @@ description: All about the Catalogue Management for the products in details on G
 
 The Catalogue Management System enables the Sellers & Service providers to broadcast their product, services, price changes and introduce new items.
 
+<YouTube embedId="xTPGjDoruvE" />
+
 In this article we will go through the all process required to **list your product on the GeM Portal**. These are:
 
 1. **Category Creation**
