--- a/posts/bid-participation.mdx
+++ b/posts/bid-participation.mdx
@@ -41,6 +41,8 @@ Upload the supporting document and proceed. If EMD is required in the bid then y
 
 Verify with the available verification method and you are done
 
+<Ads />
+
 ### Custom Item Bids
 
 There are no limits of the items requirement in the department and its not necessary that the category of that item is available on the GeM portal. therefore, buyer have an option to create the bid of that type of items on the GeM portal
@@ -66,6 +68,8 @@ Click on the participate. Upload the saved excel sheet. GeM system will automati
 Bunch bid contains more than one item. It is a group of the items. The purpose for creating bunch bid is to save time in the bid process.
 
 Find the bunch bid in the _Bunch Bid_ section and click on the participation now follow the same process like other types of bids.
+
+<Ads />
 
 ## Participate in Service Bids
 
