--- a/posts/catalogue-management-products.mdx
+++ b/posts/catalogue-management-products.mdx
@@ -29,6 +29,8 @@ If you are unable to find the right one for your product, then click on "_Cannot
 
 Request Management tab will popup. You can create a request from here. Select "_Request type_" as "_New category creation_". Fill the description and upload the supporting document and click on "_Generate Request_" button.
 
+<Ads />
+
 ### Update in the existing category
 
 To update or suggest any change in the existing category, you may select "_Request for Category Up-gradation_". Enter the description and upload supporting document and click on the "_Generate Request_" button.
@@ -45,6 +47,8 @@ There are two ways available for a newly added seller to list his/her product on
 - Once the request is submitted, it will be processed by the GeM Brand Approval team. It usually takes about 7 days for the approval team to review the request. They may ask for additional information on the request during this time
 - You can track the status of your request from the Brand /OEM Requests tab on your dashboard. Please note, if you don’t have any website link to enter in the link section, please enter NA
 - Furnishing wrong/misleading/spurious information will lead to rejection of your request.For Unregistered and Unbranded products, the catalog uploaded will be sent to the product approval team. Only once it is approved by them, the product is published in the market. In Registered brand case, the product is auto published in the market
+
+<Ads />
 
 ### Document Guidelines
 
@@ -110,6 +114,8 @@ Select type of Request as _We do not own any Brand and want to apply for OEM das
   />
 
 Once the request is submitted, you can track the request status in the Brand/OEM Requests option under the “Published” tab.
+
+<Ads />
 
 ## Add new Listing
 
