--- a/posts/gem-registration.mdx
+++ b/posts/gem-registration.mdx
@@ -53,6 +53,8 @@ Enter the OTP (came on the mobile number you entered) and click on "VERIFY".
 
 Congratulation you have created your GeM Seller account using Aadhaar.
 
+<Ads />
+
 ### Registration using PAN
 
 Now we are going to create an GeM Seller account using PAN.
