--- a/posts/oem-panel.mdx
+++ b/posts/oem-panel.mdx
@@ -76,6 +76,8 @@ Here, OEM can add authorization code for their resellers. OEM can also bulk uplo
 
 OEM can also delist a reseller through this panel by clicking on _Remove_ option. [^1]
 
+<Ads />
+
 ### Manage Approvals
 
 Manage approvals means the category could be in quadrant 3 or its not assigned to any quadrant in this OEM can approve the new catalog request, approve authorization codes and sellers as well
