--- a/posts/pre-requisite.mdx
+++ b/posts/pre-requisite.mdx
@@ -25,6 +25,8 @@ Here are the list of the documents required for the GeM registration.
 - Mobile number should be linked with Aadhaar
 - Active Email Id
 
+<Ads />
+
 ## Optional Documents
 
 If you want to participate in Bid and your Date of Incorporation is more than 24 months, in
@@ -41,6 +43,8 @@ following will also be needed:
 
 - UAM Number (Udyog Aadhaar Memorandum Number)
 - Mobile Number linked with UAM
+
+<Ads />
 
 ## Key notes
 
