--- a/posts/profile-completion.mdx
+++ b/posts/profile-completion.mdx
@@ -30,6 +30,8 @@ The profile section is divided into four sections
 3. **Personal Setting**
 4. **My Team**
 
+<Ads />
+
 ### My Company
 
 You can see all the details of the company in this section like PAN, Bank details etc. There are two types of the fields available in this section, one is required and another one is optional.
@@ -62,6 +64,8 @@ This section has three options
 ### My Team
 
 This section has one option to manage the secondary user, called "Add Secondary User".
+
+<Ads />
 
 ## Steps to complete the GeM Profile
 
