--- a/posts/secondary-user-creation.mdx
+++ b/posts/secondary-user-creation.mdx
@@ -37,6 +37,8 @@ The activation link will be sent to the secondary user's Email. Open the mail an
   content="If Primary user has registered with PAN, the Secondary user will have to register with PAN. And, If Primary user has registered with Aadhaar, the Secondary user will have to register with Aadhaar."
 />
 
+<Ads />
+
 ### Registration using PAN
 
 If the primary user was registered with the PAN, the secondary user must have to registered with the PAN. Therefore we are going to create a secondary user with the PAN.
@@ -61,6 +63,8 @@ You will see a success message, "You have been activated successfully".
 After Successfully activating the Secondary User Account,
 the Secondary User can update their profile by logging in to GeM portal with
 their credentials.
+
+<Ads />
 
 ### Update the Secondary User's Profile
 
