--- a/posts/seller-dashboard-overview.mdx
+++ b/posts/seller-dashboard-overview.mdx
@@ -69,6 +69,8 @@ You must have to submit your Caution Money to start listing your products or ser
 - **Generate Challan and View statement** : You will redirect to an external website by clicking this button. You can view the statement or transfer the amount to an account.
 - **Withdraw Excess Funds** : You can withdraw excess fund from the Caution money.
 
+<Ads />
+
 ### Upload TDS Certificate
 
 You can search and upload TDS Certificate from this panel.
@@ -105,6 +107,8 @@ There is only one link in this menu, i.e List of Bids. By clicking on this link 
   width="1200"
   height="900"
 />
+
+<Ads />
 
 ### Purchase Requisitions
 
