--- a/posts/vendor-assesment.mdx
+++ b/posts/vendor-assesment.mdx
@@ -20,6 +20,8 @@ The term Vendor Assessment same as other E-Commerce platform like, Flipkart has 
 - Sellers are free to repeat the assessment even before the expiry of validity.
 - Certain categories of sellers are exempted from Vendor. Application for exemption can be made in the portal.
 
+<Ads />
+
 ## Steps to get Vendor Assessed
 
 Let's apply for Vendor Assessment.
@@ -48,6 +50,8 @@ Next tab will be "Financial Details". Then financial details are auto fetched by
 Payments tab will open. Now you have to pay the sum [^3] to get your form submitted.
 
 You can view your request in the Assessment Tab [^4].
+
+<Ads />
 
 ## Steps to get Vendor Assessment Exemption
 
